# C4AI

./: CMakeLists.txt  PROPOSAL.md  README.md
app/: cinder_app_main.cc
include/: board.h  connect_four_visualizer.h  negamax_solver.h  nnplayer.h
src/: board.cc  negamax_solver.cc  nnplayer.cc
visualizer/: connect_four_visualizer.cc
